{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 32,
  "lineage": "477110c4-97e7-8200-9985-4eaa10598b97",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eboost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07f091b3156eff1b5",
            "arn": "arn:aws:ec2:us-east-2:338449120570:elastic-ip/eipalloc-07f091b3156eff1b5",
            "association_id": "eipassoc-0feaadf555fea6e71",
            "domain": "vpc",
            "id": "eipalloc-07f091b3156eff1b5",
            "instance": "i-0fc4dadd851362906",
            "network_border_group": "us-east-2",
            "network_interface": "eni-02081b9cfe39db0ad",
            "private_dns": "ip-10-0-1-11.us-east-2.compute.internal",
            "private_ip": "10.0.1.11",
            "public_dns": "ec2-3-22-232-159.us-east-2.compute.amazonaws.com",
            "public_ip": "3.22.232.159",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eboost-eip"
            },
            "tags_all": {
              "Name": "eboost-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.eboost",
            "aws_security_group.eboost",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_key_pair.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "eboost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05eb56e0befdb025f",
            "arn": "arn:aws:ec2:us-east-2:338449120570:instance/i-0fc4dadd851362906",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fc4dadd851362906",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "eboost-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02081b9cfe39db0ad",
            "private_dns": "ip-10-0-1-11.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.11",
            "public_dns": "ec2-3-22-71-11.us-east-2.compute.amazonaws.com",
            "public_ip": "3.22.71.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-2:338449120570:key/fee38abf-dc17-4b1b-bdd8-16c0d8c6e179",
                "throughput": 0,
                "volume_id": "vol-0c6b970adea042c28",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0530dd3fdcdf3a5b4",
            "tags": {
              "Name": "eboost-instance"
            },
            "tags_all": {
              "Name": "eboost-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-086797b713f9331af"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eboost",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_key_pair.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:338449120570:internet-gateway/igw-08d8eeff8bf9ddcd2",
            "id": "igw-08d8eeff8bf9ddcd2",
            "owner_id": "338449120570",
            "tags": {
              "Name": "eboost-igw"
            },
            "tags_all": {
              "Name": "eboost-igw"
            },
            "vpc_id": "vpc-04691782ac9e95bb0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:338449120570:route-table/rtb-013504462307a35e0",
            "id": "rtb-013504462307a35e0",
            "owner_id": "338449120570",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08d8eeff8bf9ddcd2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eboost-public-rt"
            },
            "tags_all": {
              "Name": "eboost-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04691782ac9e95bb0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0778a567941697fc8",
            "route_table_id": "rtb-013504462307a35e0",
            "subnet_id": "subnet-0530dd3fdcdf3a5b4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eboost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:338449120570:security-group/sg-086797b713f9331af",
            "description": "Security group for EBoost infrastructure",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-086797b713f9331af",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1883,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1883
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8883,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8883
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9443
              }
            ],
            "name": "eboost-sg",
            "name_prefix": "",
            "owner_id": "338449120570",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eboost-sg"
            },
            "tags_all": {
              "Name": "eboost-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04691782ac9e95bb0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:338449120570:subnet/subnet-0530dd3fdcdf3a5b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0530dd3fdcdf3a5b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "338449120570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eboost-public-subnet"
            },
            "tags_all": {
              "Name": "eboost-public-subnet"
            },
            "vpc_id": "vpc-04691782ac9e95bb0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:338449120570:vpc/vpc-04691782ac9e95bb0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f8a16980216435dc",
            "default_route_table_id": "rtb-05aadc64e8868f3ed",
            "default_security_group_id": "sg-0c220b9ff9ba9dee7",
            "dhcp_options_id": "dopt-0d93feaa8dc0337b5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04691782ac9e95bb0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05aadc64e8868f3ed",
            "owner_id": "338449120570",
            "tags": {
              "Name": "eboost-vpc"
            },
            "tags_all": {
              "Name": "eboost-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}